<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/video_stream_label"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/video_stream_url_label" />

                <EditText
                    android:id="@+id/video_stream_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="rtsp://"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:text="@string/video_stream_input" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/robot_server_port_label"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/server_port_label" />

                <EditText
                    android:id="@+id/robot_server_port_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/server_port_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/server_http_port_label"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/server_http_port_label" />

                <EditText
                    android:id="@+id/server_http_port_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/server_http_port_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/video_stream_port_label"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/video_stream_port_label" />

                <EditText
                    android:id="@+id/video_stream_port_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/video_stream_port_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ssh_host_label"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/ssh_host_name_label" />

                <EditText
                    android:id="@+id/ssh_host_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/ssh_host_name_hint"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ssh_port_label"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/ssh_host_port_label" />

                <EditText
                    android:id="@+id/ssh_port_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/ssh_host_port_label"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="22" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ssh_username_label"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/ssh_userame_label" />

                <EditText
                    android:id="@+id/ssh_username_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/ssh_userame_label"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ssh_password_label"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/ssh_password_label" />

                <EditText
                    android:id="@+id/ssh_password_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/ssh_password_label"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/save_button" />

                <Button
                    android:id="@+id/start_server_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/start_server_button" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
