<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.yarg0007.robotpicontroller.widgets.VideoStream
            android:id="@+id/video_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:fitsSystemWindows="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/config_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/config_button"/>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ToggleButton
                    android:id="@+id/connect_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="@string/toggle_connect_on"
                    android:textOff="@string/toggle_connect_off"/>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Switch
                    android:id="@+id/stickyhead"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sticky_head"
                    android:layout_gravity="right"
                    android:background="@color/transparentUI"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.yarg0007.robotpicontroller.widgets.Joypad
                    android:id="@+id/left_joystick"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="bottom"/>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ListView
                        android:id="@+id/audio_track_list"
                        android:layout_width="220dp"
                        android:layout_height="120dp"
                        android:divider="#44FFFFFF"
                        android:dividerHeight="1dp"
                        android:background="#80000000"
                        android:scrollbars="vertical"
                        android:fadeScrollbars="false"/>

                    <Button
                        android:id="@+id/open_mouth_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open_mouth"/>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ToggleButton
                            android:id="@+id/play_audio_toggle_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textOff="@string/toggle_audio_on"
                            android:textOn="@string/toggle_audio_off"/>

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <Button
                            android:id="@+id/speak_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/speak"/>

                    </LinearLayout>

                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <com.yarg0007.robotpicontroller.widgets.Joypad
                    android:id="@+id/right_joystick"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="bottom"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/connection_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:background="#B3000000"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:indeterminate="true"/>

            <TextView
                android:id="@+id/connection_status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Connecting..."
                android:textColor="#FFFFFFFF"
                android:textSize="18sp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/connection_elapsed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFCCCCCC"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:visibility="gone"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>